--- a/views/dangky.ejs
+++ b/views/dangky.ejs
@@ -80,7 +80,7 @@
                     </p>
 
                     <div class="auth-logo-circle">
-                        <img src="/images/robo4.png" alt="Logo" class="auth-right-logo" />
+                        <img src="/images/b4.png" alt="Logo" class="auth-right-logo" />
                     </div>
                 </div>
             </div>
