--- a/views/dangnhap.ejs
+++ b/views/dangnhap.ejs
@@ -85,7 +85,7 @@
                     <p class="auth-right-text">Nếu bạn chưa có tài khoản, hãy đăng ký để bắt đầu hành trình.</p>
 
                     <div class="auth-logo-circle">
-                        <img src="/images/robo1.png" alt="Logo" class="auth-right-logo" />
+                        <img src="/images/an.png" alt="Logo" class="auth-right-logo" />
                     </div>
                 </div>
             </div>
